# ROS2-vehicle

./: .gitignore  build.sh
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/launch/: 4_wheel_rectangle.xml  rviz.launch.xml
src/interfaces/msg/: KinematicInput.msg  VCON.msg  VehicleDimensions.msg
src/interfaces/rviz/: basic_view.rviz
src/interfaces/urdf/: simple_vehicle.urdf
src/misc/map_creator/: package.xml  setup.cfg  setup.py
src/misc/map_creator/map_creator/: map_from_file.py
src/misc/map_creator/utils/: create_map_txt.py  oval_track.txt
src/misc/tfs/: package.xml  setup.cfg  setup.py
src/misc/tfs/tfs/: base_link_to_world.py  grid_to_world.py
src/planning/center_line/: package.xml  setup.cfg  setup.py
src/planning/center_line/center_line/: center_line_from_grid.py
src/vehicle/vcon/: CMakeLists.txt  VCON.json  package.xml  setup.cfg  setup.py
src/vehicle/vcon/src/: vcon_publisher_cpp.cpp
src/vehicle/vcon/vcon/: vcon_publisher.py  vcon_publisher_py.py
src/vehicle_controllers/general_controllers_py/: package.xml  setup.cfg  setup.py
src/vehicle_controllers/general_controllers_py/general_controllers_py/: PID.py
src/vehicle_controllers/longitudinal_control_py/: package.xml  setup.cfg  setup.py
src/vehicle_controllers/longitudinal_control_py/longitudinal_control_py/: kinematic_PID.py
src/vehicle_models/kinematic_model_py/: package.xml  setup.cfg  setup.py
src/vehicle_models/kinematic_model_py/kinematic_model_py/: kinematic_model.py
src/vehicle_models/kinematic_model_py/launch/: kinematic_model_launch.xml
